# Lupus

./: .gitignore  bot.py  pyproject.toml  requirements.txt
apis/: NekosLife.py  OpenWeatherMap.py  Server.py  Urbandictionary.py  __init__.py
cogs/: Fun.py  Furry.py  General.py  Math.py  Misc.py  Reminder.py  Server.py  Weeb.py
db/: Reminder.py  connection.py
helper/: __init__.py  caching.py  checks.py
