[tool.poetry]
name = "furbot"
version = "0.1.0"
description = "A simplistic Discord bot."
authors = ["Rendy Arya Kemal <rendyarya22@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.3.3"
pillow = "^7.1.1"
aiohttp = "^3.6.2"
cachetools = "^4.1.0"
psutil = "^5.7.0"
yippi = {git = "https://git.rorre.xyz/ren/Yippi.git"}
motor = "^2.1.0"
umongo = "^2.2.0"
sympy = "^1.5.1"
cython = "^0.29.16"
matplotlib = "^3.2.1"
jikanpy = "^3.4.2"
pebble = "^4.5.1"
py-memoize = "^1.0.3"
aiocache = {extras = ["redis"], version = "^0.11.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
